tests/NormalTests/paczka1/fuzzy1/10845239.err
Error in line 2: Dfdg3Ey S7.0 15,8
Error in line 15: 6dgP S301 12,5
Error in line 24: 6dgP A859 69,0
Error in line 14: 8iL1lRp7YNi S284 28,1
